--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>悅城2</title>
+    <title>悅城2測試網站</title>
     <link href="/src/style.css" rel="stylesheet" />
   </head>
   <body>
